# mealprep

./: .coveragerc  .cursorrules  .env.example  .gitignore  Dockerfile  Makefile  README.md  demo_ai_ingredient.py  docker-compose.yml  inspect_excel.py  manage.py  package-lock.json  pyproject.toml  pytest.ini  test_ai_api.sh  tofu_import_script.py
data/: DRV.csv  authoritative_nutrients.json  chatgpt_foods.json  my_foods.json
docs/: AI_INGREDIENT_CREATION.md
food_editor_ui/backend/: app.py  models.py
food_editor_ui/frontend/: index.html  script.js  style.css
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vitest.config.js  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: global.css
frontend/src/components/: AddedMealComponentsDisplay.vue  MacronutrientPieChart.vue  MealComponentForm.vue  MealComponentSearch.vue  MealComponentTooltip.vue  MealPlanForm.vue  NutrientBarChart.vue  NutrientDisplayTable.vue  NutrientSourceDetailModal.vue  NutrientVisualizer.vue  NutritionalBreakdown.vue  PlanDetailsForm.vue  PlanHeader.vue
frontend/src/domain/: AbstractCompositeFoodItem.js  Ingredient.js  Meal.js  (+3 more)
src/api/: admin.py  domain_services.py  models.py  serializers.py  services.py  urls.py  views.py
src/mealprep_project/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_api_views.py  test_dietary_reference_value_views.py  test_find_nutrient_edge_cases.py  test_food_portion.py  test_food_portion_views.py  test_import_custom_drvs.py  test_import_custom_drvs_edge_cases.py  test_import_custom_drvs_utils.py  test_import_fdc_foundational.py  test_ingredient_model.py  test_ingredient_nutrient_link_views.py  test_ingredient_usage_views.py  test_meal_component_views.py  test_meal_components_plans.py  test_meal_plan_views.py  test_nutrient_model.py  test_person_profile_and_drv.py  test_tofu_import_script.py
(+44 files in other folders)
